Bug 218655 - lib80211 regdomain bad dealloc
Summary: lib80211 regdomain bad dealloc
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: wireless (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Some People
Assignee: freebsd-wireless (Nobody)
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2017-04-14 15:00 UTC by valentin.vergez@stormshield.eu
Modified: 2018-12-09 05:37 UTC (History)
2 users (show)

See Also:


Attachments
Correct regdata cleanup in lib80211_regdomain.c (275 bytes, patch)
2017-04-14 15:00 UTC, valentin.vergez@stormshield.eu
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description valentin.vergez@stormshield.eu 2017-04-14 15:00:46 UTC
Created attachment 181783 [details]
Correct regdata cleanup in lib80211_regdomain.c

Hi,

LIST_REMOVE() was missing in cleanup_bands(), used in lib80211_regdomain_cleanup.
This code existed in ifconfig, but was not used there.

See the attached patch.

Regards,

Valentin V
Comment 1 commit-hook freebsd_committer freebsd_triage 2017-04-14 20:11:14 UTC
A commit references this bug:

Author: adrian
Date: Fri Apr 14 20:10:18 UTC 2017
New revision: 316939
URL: https://svnweb.freebsd.org/changeset/base/316939

Log:
  [lib80211] fix a missing cleanup path.

  PR:		lib/218655
  Reported by:	<valentin.vergez@stormshield.eu>

Changes:
  head/lib/lib80211/lib80211_regdomain.c
Comment 2 Eitan Adler freebsd_committer freebsd_triage 2018-05-23 10:27:28 UTC
batch change of PRs untouched in 2018 marked "in progress" back to open.
Comment 3 commit-hook freebsd_committer freebsd_triage 2018-12-09 05:35:26 UTC
A commit references this bug:

Author: avos
Date: Sun Dec  9 05:35:23 UTC 2018
New revision: 341753
URL: https://svnweb.freebsd.org/changeset/base/341753

Log:
  MFC r316939:
  [lib80211] fix a missing cleanup path.

  PR:		lib/218655
  Reported by:	<valentin.vergez@stormshield.eu>

Changes:
_U  stable/11/
  stable/11/lib/lib80211/lib80211_regdomain.c