[lib80211] fix a missing cleanup path.

PR:		lib/218655
Reported by:	<valentin.vergez@stormshield.eu>